# fullstack-rag-app

gemini-rag/: .env  main.py  pyproject.toml  requirements.txt
